--- a/data/vscode-settings.json
+++ b/data/vscode-settings.json
@@ -4,23 +4,25 @@
   "editor.fontFamily": "Fira Code Light",
   "editor.fontSize": 15,
   "editor.fontLigatures": true,
+  "editor.linkedEditing": true,
   "terminal.integrated.fontFamily": "Fira Code Light",
   "terminal.integrated.fontSize": 15,
-  "git.confirmSync": false,
   "breadcrumbs.enabled": true,
-  "extensions.ignoreRecommendations": false,
-  "workbench.iconTheme": "eq-material-theme-icons",
-  "javascript.updateImportsOnFileMove.enabled": "never",
+  "git.confirmSync": false,
+  "git.autofetch": true,
   "workbench.startupEditor": "newUntitledFile",
-  "php.suggest.basic": false,
-  "window.titleBarStyle": "custom",
-  "gitlens.views.fileHistory.location": "scm",
   "workbench.colorTheme": "GitHub Dark",
-  "kickassembler.assemblerJar": "{{ansible_env.HOME}}/bin/KickAssembler/KickAss.jar",
+  "workbench.iconTheme": "material-icon-theme",
+  "window.titleBarStyle": "custom",
+  "extensions.ignoreRecommendations": false,
+  "javascript.updateImportsOnFileMove.enabled": "never",
+  "php.suggest.basic": false,
+  "go.toolsManagement.autoUpdate": true,
+  "kickassembler.assembler.jar": "{{ansible_env.HOME}}/bin/KickAssembler/KickAss.jar",
   "kickassembler.emulatorRuntime": "/usr/bin/x64sc",
   "kickassembler.javaRuntime": "/usr/bin/java",
   "kickassembler.outputDirectory": "build",
-  "kickassembler.debuggerRuntime": "{{ansible_env.HOME}}/bin/C64-65XE-Debugger/c64debugger",
+  "kickassembler.debuggerRuntime": "{{ansible_env.HOME}}/bin/C64-65XE-NES-Debugger/c64debugger",
   "kickassembler.debuggerOptions": "-wait 3000 -autojmp",
-  "editor.renameOnType": true
+  "material-icon-theme.saturation": 0.8
 }
