--- a/playbooks/fedora-post-install.yaml
+++ b/playbooks/fedora-post-install.yaml
@@ -56,6 +56,7 @@
       - io.typora.Typora
       - org.processing.processingide
       - com.skype.Client
+      - im.riot.Riot
     gnome_shell_extensions:
       #- dash-to-panel@jderose9.github.com
       - appindicatorsupport@rgcjonas.gmail.com
