--- a/playbooks/fedora-post-install.yaml
+++ b/playbooks/fedora-post-install.yaml
@@ -20,6 +20,7 @@
       - mediawriter # Fedora Media Writer
       - soundconverter # Sound Converter
       - vice # VICE
+      - steam # Steam
       - celluloid # Celluloid
       - gnome-extensions-app # Extensions
       - gthumb # gThumb
@@ -31,10 +32,11 @@
       - python3-jmespath,python3-psutil # Ansible dependencies
       - libappindicator # GNOME Shell extensions dependencies
     packages_nogpgcheck:
-      - https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ansible_lsb.major_release}}.noarch.rpm
-      - https://mirrors.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ansible_lsb.major_release}}.noarch.rpm
-      - https://dev.mysql.com/get/Downloads/MySQLGUITools/mysql-workbench-community-8.0.31-1.fc37.x86_64.rpm
-      - https://linux.dropbox.com/packages/fedora/nautilus-dropbox-2022.12.05-1.fedora.x86_64.rpm
+      - https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ansible_lsb.major_release}}.noarch.rpm # RPM Fusion free
+      - https://mirrors.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ansible_lsb.major_release}}.noarch.rpm # RPM Fusion nonfree
+      - https://dev.mysql.com/get/Downloads/MySQLGUITools/mysql-workbench-community-8.0.31-1.fc37.x86_64.rpm # MySQL Workbench
+      - https://linux.dropbox.com/packages/fedora/nautilus-dropbox-2022.12.05-1.fedora.x86_64.rpm # Dropbox
+      - https://code-industry.net/public/master-pdf-editor-4.3.89_qt5.x86_64.rpm # Master PDF Editor 4
     flathub:
       - com.spotify.Client # Spotify
       - com.getpostman.Postman # Postman
@@ -170,4 +172,5 @@
     - include_tasks: tasks/c64-65xe-nes-debugger.yaml
     - include_tasks: tasks/open-razer.yaml
     - include_tasks: tasks/charm.yaml
+    - include_tasks: tasks/processing.yaml
     - include_tasks: tasks/dconf.yaml
