--- a/playbooks/fedora-post-install.yaml
+++ b/playbooks/fedora-post-install.yaml
@@ -33,7 +33,7 @@
     packages_nogpgcheck:
       - https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ansible_lsb.major_release}}.noarch.rpm # RPM Fusion free
       - https://mirrors.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ansible_lsb.major_release}}.noarch.rpm # RPM Fusion nonfree
-      - https://dev.mysql.com/get/Downloads/MySQLGUITools/mysql-workbench-community-8.0.31-1.fc37.x86_64.rpm # MySQL Workbench
+      - https://cdn.mysql.com//Downloads/MySQLGUITools/mysql-workbench-community-8.0.31-1.fc37.x86_64.rpm # MySQL Workbench
       - https://linux.dropbox.com/packages/fedora/nautilus-dropbox-2022.12.05-1.fedora.x86_64.rpm # Dropbox
       - https://code-industry.net/public/master-pdf-editor-4.3.89_qt5.x86_64.rpm # Master PDF Editor 4
       - https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6.1-2/wkhtmltox-0.12.6.1-2.almalinux9.x86_64.rpm # wkhtmltopdf
